[package]
name = "flow"
version = "0.1.0"
edition = "2024"

[dependencies]
dirs = "6.0.0"
serde = {version = "1.0.219", features = ["derive"] }
uuid = "1.17.0"
libp2p = { version = "0.54", features = ["identify", "rsa"] }
fs = "0.0.5"
ed25519-dalek = "2.2.0"
clap = { version = "4.5", features = ["derive"] }

